k8s/beacon-chain/beacon-chain.deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: beacon-chain
  namespace: beacon-chain
spec:
  replicas: 1
  selector:
    matchLabels:
      component: beacon-chain
      universe: beacon-chain
  template:
    metadata:
      labels:
        component: beacon-chain
        universe: beacon-chain
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9090'
    spec:
      priorityClassName: production-priority
      containers:
        - name: beacon-chain
          image: gcr.io/prysmaticlabs/prysm/beacon-chain:latest
          args: 
            - --enable-powchain
            - --web3provider=ws://public-rpc-nodes.pow.svc.cluster.local:8546
              #- --verbosity=debug
            - --deposit-contract=$(DEPOSIT_CONTRACT_ADDRESS)
            - --rpc-port=4000
            - --monitoring-port=9090
            - --bootstrap-node=/ip4/$(BOOTNODE_SERVICE_HOST)/tcp/$(BOOTNODE_SERVICE_PORT)/p2p/QmUWTsZwoJ51tey4fEE9EAqzQeHFHm4FE9aSfgTv8xyuG5 
            - --relay-node=/ip4/35.224.249.2/tcp/30000/p2p/QmUk4joE2SP6uApekTaxji6PGnZjgRpUmb1RfsmYyqvL4m
            - --p2p-port=5000
            - --demo-config
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "250Mi"
              cpu: "100m"
          ports:
            - containerPort: 4000
              name: grpc
            - containerPort: 5000
              name: p2p
            - containerPort: 9090
              name: prometheus
