k8s/beacon-chain/bootnode.deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata: 
  name: bootnode
  namespace: beacon-chain
  annotations:
    prometheus.io/scrape: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bootnode
  template:
    metadata:
      labels:
        component: bootnode
    spec:
      priorityClassName: production-priority
      containers:
        - name: bootnode
          image: gcr.io/prysmaticlabs/prysm/bootnode:latest
          args:
            - "-debug"
            - "-port=4000"
            - "-private=CAASpwkwggSjAgEAAoIBAQDLd5Sfv/8+ybSSeEj3980Bk1JOd8SXQ8e22ntKqtCWOoQ27jwUn6FH03poMvikJlHzkgnEXCZugeAbc/8rP1q/JRlOqhO/Zw7aQm6e+VjyKdzbTMv/YPkctsvStJw66U2EKkah02t7KTLO82qOQW3rgQFtRqKcN/jT0K2M4l6ED6DFhAYzjnBZpxEX3rCbqmKJQMYBFxlXa7T1kfpUQ7MdRtGtxW/GxJvo5CPf7e8T2SrKok437TN4aoD03W+czaJd48EFb/kgQNKbBoGX7+2c/liatm7QqvYbNkuU+N0sPZ7tkoxyxVQN2ie6WsZDVH3F1LOyI638w6WhYu2TmY9pAgMBAAECggEAYyCSRzYqK7PnhoiVvEF9Hmxg6BvPqoZ6MWrGMH2B+/7sVTrCCKYw1CaC92sF2itVN96JZaIjkykxPw7HXZGTK5buenXAAzs5cDp3 [...]
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 4000
              name: bootnodeport
