k8s/beacon-chain/relay.deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata: 
  name: relay
  namespace: beacon-chain
  annotations:
    prometheus.io/scrape: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      component: relay
  template:
    metadata:
      labels:
        component: relay
    spec:
      priorityClassName: production-priority
      containers:
        - name: relay
          image: gcr.io/prysmaticlabs/prysm/relaynode:latest
          args:
            - "-debug"
            - "-port=4000"
            - "-private=CAASpwkwggSjAgEAAoIBAQCp0mvlbg5AkS3HgqYpv/rIxZlk3MYWeVC3jP8uDVfAcD62plshOmE4dNCGTYkp7nmebbqauVF+Vp9OMuLP09d7n0SYzWn/hqnCbJCkJZhU2Cg7j9JMgPhQqtfqFCph33PMOKj2gU5DHCp3FimiQFADL5rpEI4iZOqMvDdYVmR/4yvYqM13IMBNZKUn1fbQ2EK6UCZPoCiyR0h110ahOSXp4l9e1Z8GFiHTsJBqn49qG8foWBVp9FGxY/GWTm5eSBPbOW33pNWallAQO5Qq4saeexXrzwuXsrzW0qYew0ODpgDzcDtA6gVGaALaYuS0QOONiOlGbmYBTplUkfmlWEbNAgMBAAECggEAU+7LIwcFBkZ60Nuy0nmvMmHvUZmIUf09tqp6SMGReGxBoraP3dljyap6kZZqz42tEG99RhGHxKB9dgHSdhNmshPirH8B/6gH6S8N [...]
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 4000
              name: relayport
