k8s/beacon-chain/validator.deploy.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: validator
  namespace: beacon-chain
spec:
  replicas: 1
  selector:
    matchLabels:
      component: validator
  template:
    metadata:
      labels:
        component: validator
    spec:
      priorityClassName: production-priority
      containers:
      - name: validator
        image: gcr.io/prysmaticlabs/prysm/validator:latest
        args:
        - --keystore-path=/keystore
        - --password=nopass
        - --datadir=/data  
        - --beacon-rpc-provider=beacon-chain:4000 
        - --demo-config
        - --enable-tracing
        - --tracing-endpoint=http://jaeger-collector.istio-system.svc.cluster.local:14268
        volumeMounts:
        - name: localdata
          mountPath: /data
        - name: keystore
          mountPath: /keystore
          readOnly: true
        resources:
          requests:
            cpu: "50m"
            memory: "100Mi"
      volumes:
        - name: keystore
          emptyDir: {}
        - name: localdata
          emptyDir: {}
