k8s/beacon-chain/bootnode.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bootnode
  namespace: beacon-chain
spec:
  selector:
    component: bootnode
  ports:
    - port: 4000
      targetPort: 4000
      name: bootnodeport
  type: ClusterIP
