k8s/beacon-chain/cluster-manager.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: cluster-pk-manager
  namespace: beacon-chain
spec:
  replicas: 1
  serviceName: cluster-pk-manager
  selector:
    matchLabels:
      component: cluster-pk-manager
  template:
    metadata:
      labels:
        component: cluster-pk-manager
    spec:
      priorityClassName: production-priority
      serviceAccountName: cluster-pk-manager
      containers:
      - name: server
        image: gcr.io/prysmaticlabs/prysm/cluster-pk-manager/server:latest 
        args: 
        - --deposit-contract=$(DEPOSIT_CONTRACT_ADDRESS)
        - --private-key=TODO
        - --rpc=ws://public-rpc-nodes.pow.svc.cluster.local:8546
        - --port=8000
        - --deposit-amount=320000000000000000
        - --db-path=/data
        - --verbose
        ports:
        - containerPort: 8000
          name: grpc-service
        volumeMounts:
        - mountPath: /data
          name: cluster-pk-manager-db 
  volumeClaimTemplates:
  - metadata:
      name: cluster-pk-manager-db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests: 
          storage: 1Gi
---
kind: Service
apiVersion: v1
metadata:
  name: cluster-pk-manager
  namespace: beacon-chain
spec:
  selector:
    component: cluster-pk-manager
  ports: 
  - port: 8000
    targetPort: 8000
    name: grpc-service
  type: ClusterIP
