k8s/beacon-chain/public-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: public-api-swagger-ui
  namespace: beacon-chain
  labels:
    app: beacon-chain
    component: public-api-swagger-ui
    version: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beacon-chain
      component: public-api-swagger-ui
      version: production
  template:
    metadata:
      labels:
        app: beacon-chain
        component: public-api-swagger-ui
        version: production
    spec:
      priorityClassName: production-priority
      containers:
        - name: ui
          image: swaggerapi/swagger-ui:v3.0.5
          ports:
          - containerPort: 8080
            name: http-ui
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: public-api-gateway
  namespace: beacon-chain
  labels:
    app: beacon-chain
    component: public-api-gateway
    version: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beacon-chain
      component: public-api-gateway
      version: production
  template:
    metadata:
      labels:
        app: beacon-chain
        component: public-api-gateway
        version: production
    spec:
      priorityClassName: production-priority
      containers:
        - name: server
          image: gcr.io/prysmaticlabs/prysm/beacon-chain/gateway:latest
          args:
          - --beacon-rpc=beacon-chain.beacon-chain.svc.cluster.local:4000
          - --port=8000
          ports:
          - containerPort: 8000
            name: http-gateway
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
---
kind: Service
apiVersion: v1
metadata:
  name: public-api-gateway
  namespace: beacon-chain
spec:
  selector:
    app: beacon-chain
    component: public-api-gateway
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: public-api-ui
  namespace: beacon-chain
spec:
  selector:
    app: beacon-chain
    component: public-api-swagger-ui
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
