k8s/beacon-chain/relay.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: relay
  namespace: beacon-chain
spec:
  selector:
    component: relay
  ports:
    - port: 4000
      targetPort: 4000
      name: relayport
  type: ClusterIP
