k8s/beacon-chain/infura.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: goerli-infura-ext
  namespace: beacon-chain
spec:
  hosts:
  - goerli.infura.io
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
