k8s/beacon-chain/testnet-site.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testnet-site-alpha
  namespace: beacon-chain
  labels:
    app: beacon-chain
    component: testnet-site
    version: alpha
spec:
  replicas: 3
  selector:
    matchLabels:
      app: beacon-chain
      component: testnet-site
      version: alpha
  template:
    metadata:
      labels:
        app: beacon-chain
        component: testnet-site
        version: alpha
    spec:
      priorityClassName: best-effort-priority
      containers:
      - name: site
        image: gcr.io/prysmaticlabs/prysm-testnet-site:latest
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          requests:
            cpu: "100m"
---
kind: Service
apiVersion: v1
metadata:
  name: testnet-site-alpha
  namespace: beacon-chain
spec:
  selector:
    app: beacon-chain
    component: testnet-site
    version: alpha
  ports:
  - port: 80
    targetPort: 80
    name: http-nginx
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testnet-site
  namespace: beacon-chain
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - alpha.prylabs.net
    port:
      number: 80
      name: http-testnet-alpha
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - alpha.prylabs.net
    port:
      number: 443
      name: https-testnet-alpha
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testnet-site
  namespace: beacon-chain
spec:
  hosts:
  - alpha.prylabs.net
  gateways:
  - testnet-site
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port: 
          number: 80
        host: testnet-site-alpha.beacon-chain.svc.cluster.local
